chore: add test case
